<resources>
    <string name="app_name">TimeGrid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Create_Time_Grid">Create Time Grid</string>
    <string name="Day_View">Day View</string>
    <string name="Table_View">Table View</string>
    <string name="Start_from_scratch">Start With SCRATCH</string>
    <string name="Start_with_a_table_skeleton">Start With SKELETON</string>
    <string name="Start_Time">Start Time</string>
    <string name="to">to</string>
    <string name="Period_Duration">Period Duration</string>
    <string name="Break_Start_Time">Break Start Time</string>
    <string name="Break_Time">Break Time</string>
    <string name="Break_Duration">Break Duration</string>
    <string name="End_Time">End Time</string>
    <string name="Alarm_Before">Remind Before</string>
    <string name="Schedule_Now">Schedule Now</string>
    <string name="Day_of_week">Day of Week</string>
    <string name="All_Day">All Day</string>
    <string name="Subject">Subject</string>
    <string name="Venue">Venue</string>
    <string name="Set">Set</string>
    <string name="Add">Add</string>
    <string name="Update">Update</string>
    <string name="Cancel">Cancel</string>
    <string name="Create_Grid">Create Grid</string>
    <string name="Delete_Grid">Delete Grid</string>
    <string name="Notes">Notes</string>
    <string name="Create">Create</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="click">Click</string>
    <string name="slide_1_title">Scratch</string>
    <string name="slide_1_desc"><u>"SCRATCH-:"</u> work schedules cycle employees through day, swing, and night shifts. This cycle helps to distribute different shifts between all employees so that no one is stuck with just the less desirable hours.This work schedule is not as common but can be seen in many careers like the military, construction work, roadwork jobs, power plants, and hospitals. These shifts can cycle weekly or quarterly, depending on the type of work required. For many employees, the transition between the different schedules can be tricky. Sleep and eating patterns change and the employee may see their family and friends less because of their Scratch schedule. This type of timetable does have some benefits. Employees are able to spend more time with family and friends during their normal work hours, and may be able to run errands they normally would not be able to complete.<u>" Hours can cycle between day shifts (7:00 AM - 3:00 PM), swing shifts (1:00 PM - 9:00 PM)"</u>, and weekend, night or overnight shifts.</string>

    <string name="slide_2_title">Skeleton</string>
    <string name="slide_2_desc"><u>"SKELETON-:"</u> work schedule is a timetable that generally consists of the same number of hours and days worked per week. Skeleton work schedules tend to stay consistent once the number of hours and days have been agreed upon by both the employer and the worker. <u>"An example of a Skeleton schedule would be Monday - Friday from 8:30 AM to 5:00 PM or Thursday - Sunday 3:00 PM to 11:00 PM."</u></string>

</resources>
