<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/updatelayout"
    android:visibility="gone"
    android:background="@android:color/white">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/colorTransparent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding2"
                android:background="@color/colorPrimary"/>
            <!-- //////////////////////////////////////////////////// -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding40"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="@dimen/padding5">
                <TextView
                    android:id="@+id/Dayofweek"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textColor="@android:color/background_dark"
                    android:layout_height="match_parent"
                    android:hint=""/>
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/Allday"
                    android:textColor="@android:color/background_dark"
                    android:checked="false"
                    android:text="@string/All_Day"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding1"
                android:background="@drawable/borderbottom"/>
            <!-- //////////////////////////////////////////////////// -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding40"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="@dimen/padding5">

                <TextView
                    android:id="@+id/StartTime"
                    android:layout_width="0dp"
                    android:layout_weight="0.95"
                    android:textSize="@dimen/padding16"
                    android:gravity="bottom"
                    android:hint="@string/Start_Time"
                    android:textColor="@android:color/background_dark"
                    android:background="@drawable/borderbottom"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="@dimen/padding2"
                    android:text="|"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:layout_weight="0.10"
                    android:gravity="bottom"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/EndTime"
                    android:layout_width="0dp"
                    android:layout_weight="0.95"
                    android:textSize="@dimen/padding16"
                    android:gravity="bottom"
                    android:hint="@string/End_Time"
                    android:textColor="@android:color/background_dark"
                    android:background="@drawable/borderbottom"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <!-- //////////////////////////////////////////////////// -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.95"
                    android:textSize="@dimen/padding16"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/Subject"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Subject"
                        android:textSize="@dimen/padding16"
                        android:textColor="@android:color/background_dark"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                        android:textColorHighlight="@android:color/black"
                        android:singleLine="true"
                        android:completionThreshold="1"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textCapWords">
                    </AutoCompleteTextView>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="2dp"
                    android:text="|"
                    android:layout_weight="0.10"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:gravity="bottom"
                    android:layout_marginBottom="@dimen/padding10"
                    android:layout_height="match_parent"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.95"
                    android:textSize="@dimen/padding16"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/Venue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Venue"
                        android:textSize="@dimen/padding16"
                        android:textColor="@android:color/background_dark"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                        android:textColorHighlight="@android:color/black"
                        android:singleLine="true"
                        android:completionThreshold="1"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textCapWords">
                    </AutoCompleteTextView>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <!-- //////////////////////////////////////////////////// -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95">
                    <EditText
                        android:id="@+id/AlermBefore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/Alarm_Before"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="@android:color/background_dark"
                        android:imeOptions="flagNoExtractUi"
                        android:textSize="@dimen/padding16" >
                    </EditText>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="@dimen/padding2"
                    android:text="|"
                    android:layout_weight="0.10"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_height="match_parent"/>
                <CheckBox
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/padding15"
                    android:layout_height="match_parent"
                    android:layout_weight="0.95"
                    android:id="@+id/AlermRepeat"
                    android:textColor="@android:color/background_dark"
                    android:checked="false"
                    android:text="@string/Set"/>
            </LinearLayout>
            <!-- //////////////////////////////////////////////////// -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding1"
                android:background="@color/colorAccent"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding30"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/ButtonAddUpdate"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:text="@string/Add"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"/>
                <Button
                    android:id="@+id/ButtonCancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/Cancel"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimary"
                    android:layout_height="fill_parent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>