<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Landscapmain"
    android:background="@android:color/white"
    tools:context="com.evolvan.timegrid.myTaskLandScape">
        <!-- //////////////////////////////////////////////////// -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/datafield"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding50"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_up_arrow"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="0.95"
                android:textSize="@dimen/padding16"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/Subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Subject"
                    android:textSize="@dimen/padding16"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                    android:textColorHighlight="@android:color/black"
                    android:singleLine="true"
                    android:completionThreshold="1"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textCapWords">
                    <requestFocus/>
                </AutoCompleteTextView>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="@dimen/padding2"
                android:text="|"
                android:layout_weight="0.10"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:gravity="bottom"
                android:layout_marginBottom="@dimen/padding10"
                android:layout_height="match_parent"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="0.95"
                android:textSize="@dimen/padding16"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/Venue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Venue"
                    android:textSize="@dimen/padding16"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                    android:textColorHighlight="@android:color/black"
                    android:singleLine="true"
                    android:imeOptions="flagNoExtractUi"
                    android:completionThreshold="1"
                    android:inputType="textCapWords">
                    <requestFocus/>
                </AutoCompleteTextView>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <!-- //////////////////////////////////////////////////// -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/AlermBefore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Alarm_Before"
                    android:inputType="number"
                    android:maxLength="2"
                    android:imeOptions="flagNoExtractUi"
                    android:textSize="@dimen/padding16" >
                    <requestFocus/>
                </EditText>
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/padding15"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/AlermRepeat"
                android:checked="false"
                android:text="@string/Set"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding50"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/ButtonAddUpdate"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/Update"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@color/colorAccent"
                android:layout_height="fill_parent"/>
        </LinearLayout>

    </LinearLayout>
        <!-- //////////////////////////////////////////////////// -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding40"
        android:weightSum="2"
        android:id="@+id/updel"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ButtonUpdate"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/Update"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/ButtonDelete"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="Delete"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_height="fill_parent"/>
    </LinearLayout>
</LinearLayout>